<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.praschma_online.richard.refcalculator.FinalActivity"
    android:orientation="vertical">

    <!--Title Linear Layout-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/finalActivity_tv_Ref_Title"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/finalActivity_tv_Money_Title"
            android:gravity="center_horizontal"
            android:textSize="25sp" />
    </LinearLayout>

    <!-- Referee Linear Layout-->
    <LinearLayout
        android:id="@+id/layout_Referee_0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tv_Referee"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_Referee_0"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="0"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

    </LinearLayout>

    <!-- Umpire Linear Layout-->
    <LinearLayout
        android:id="@+id/layout_Referee_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tv_Umpire"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_Referee_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="0"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

    </LinearLayout>

    <!-- Linesman Linear Layout-->
    <LinearLayout
        android:id="@+id/layout_Referee_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tv_Linesman"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_Referee_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="0"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

    </LinearLayout>

    <!-- Linejudge Linear Layout-->
    <LinearLayout
        android:id="@+id/layout_Referee_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tv_Linejudge"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_Referee_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="0"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

    </LinearLayout>

    <!-- Sidejudge Linear Layout-->
    <LinearLayout
        android:id="@+id/layout_Referee_4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tv_Sidejudge"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_Referee_4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="0"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

    </LinearLayout>

    <!-- Fieldjudge Linear Layout-->
    <LinearLayout
        android:id="@+id/layout_Referee_5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tv_Fieldjudge"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_Referee_5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="0"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

    </LinearLayout>

    <!-- Backjudge Linear Layout-->
    <LinearLayout
        android:id="@+id/layout_Referee_6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tv_Backjudge"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_Referee_6"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="0"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

    </LinearLayout>

</LinearLayout>
